--- a/Makefile.am
+++ b/Makefile.am
@@ -28,17 +28,14 @@ fso_abyss_SOURCES = \
 	$(fso_abyss_VALASOURCES:.vala=.c) \
 	$(fso_abyss_VALASOURCES:.vala=.h) \
 	\
-	gsm0710/gsm0710.c \
-	gsm0710/gsm0710_p.h \
 	$(NULL)
 
 src/.vala.stamp: $(fso_abyss_VALASOURCES)
 	$(VALAC) -c --vapidir vapi --pkg gio-2.0 \
 	                           --pkg dbus-glib-1 \
-	                           --pkg gsm0710 \
+	                           --pkg gsm0710-1.0 \
 	                           --pkg posix \
 	                           --pkg posixextra \
-	                           --pkg gee-1.0 \
 	                           --save-temps --basedir $(top_srcdir) $^
 	touch $@
 
