--- a/data/abyss.conf.sample
+++ b/data/abyss.conf.sample
@@ -2,7 +2,9 @@
 # set to 1, when the first AllocChannel request opens a session
 autoopen = 1
 # set to 1, when the last ReleaseChannel closes the session
-autorelease = 0
+autoclose = 1
+# set to 1, when closing the session should close the program
+autoexit = 1
 
 [session]
 # set 0 for 07.10 basic multiplexing, 1 for advanced
