--- a/data/abyss.conf.sample
+++ b/data/abyss.conf.sample
@@ -15,3 +15,12 @@ framesize = 89
 port = /dev/ttyUSB0
 speed = 115200
 
+[device]
+# if the device needs a wakeup before transmitting data,
+# set the number of seconds after which is falls asleep.
+# 0 = disable
+wakeup_threshold = 0
+# set number of milliseconds to wait after wake up
+# before transmitting again
+wakeup_waitms = 0
+
