--- a/configure.ac
+++ b/configure.ac
@@ -16,13 +16,13 @@ AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
 GLIB_REQUIRED=2.12.0
-GSM_REQUIRED=1.1.1
+GSMMUX_REQUIRED=0.3.1
 DBUS_REQUIRED=0.76
 
 PKG_CHECK_MODULES(DEPS,
   glib-2.0 >= $GLIB_REQUIRED
   gobject-2.0 >= $GLIB_REQUIRED
-  gsm0710-1.0 >= $GSM_REQUIRED
+  gsm0710mux-1.0 >= $GSMMUX_REQUIRED
   dbus-glib-1 >= $DBUS_REQUIRED)
 AC_SUBST(DEPS_CFLAGS)
 AC_SUBST(DEPS_LIBS)
