--- a/configure.ac
+++ b/configure.ac
@@ -15,9 +15,13 @@ AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
+VALA_REQUIRED=0.7.1
 GLIB_REQUIRED=2.12.0
 GSMMUX_REQUIRED=0.3.3
 DBUS_REQUIRED=0.76
+
+PKG_CHECK_MODULES(VALA,
+  vala-1.0 >= $VALA_REQUIRED)
 
 PKG_CHECK_MODULES(DEPS,
   glib-2.0 >= $GLIB_REQUIRED
